--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "babel-core": "^6.7.2",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.6.0",
-    "babel-register": "~6.6.2",
+    "babel-register": "^6.7.2",
     "mocha": "^2.4.5"
   },
   "dependencies": {
-    "jsdoc-to-assert": "^1.1.0"
+    "jsdoc-to-assert": "^2.0.0"
   }
 }
