--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "coc"
   ],
   "directories": {
-    "build": "babel src --out-dir lib --source-maps",
+    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
     "watch": "babel src --out-dir lib --watch --source-maps",
     "prepublish": "npm run --if-present build",
     "test": "mocha --compilers js:babel-register"
