feat(plugin): add checkAtType and checkAtParam option

--- a/test/fixtures/NoTypeOption/.babelrc
+++ b/test/fixtures/NoTypeOption/.babelrc
@@ -4,7 +4,8 @@
       "../../../src/",
       {
         "simple": true,
-        "checkAtType": true
+        "checkAtParam": false,
+        "checkAtType": false
       }
     ]
   ]
