--- a/test/fixtures/TypeString/.babelrc
+++ b/test/fixtures/TypeString/.babelrc
@@ -3,7 +3,8 @@
     [
       "../../../src/",
       {
-        "simple": true
+        "simple": true,
+        "checkAtType": true
       }
     ]
   ]
