--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mocha": "^3.0.2"
   },
   "dependencies": {
-    "jsdoc-to-assert": "~2.4.0"
+    "doctrine": "^1.3.0",
+    "jsdoc-to-assert": "^2.5.2"
   }
 }
