--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-core": "^6.18.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "mocha": "^3.1.2"
   },
