--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "babel src --out-dir lib --source-maps",
     "watch": "babel src --out-dir lib --watch --source-maps",
     "prepublish": "npm run --if-present build",
-    "test": "mocha"
+    "test": "mocha",
+    "updateSnapshot": "UPDATE_SNAPSHOT=1 mocha"
   },
   "keywords": [
     "babel",
@@ -31,19 +32,13 @@
     "testing",
     "coc"
   ],
-  "directories": {
-    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
-    "watch": "babel src --out-dir lib --watch --source-maps",
-    "prepublish": "npm run --if-present build",
-    "test": "mocha --compilers js:babel-register"
-  },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "mocha": "^3.1.2"
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "mocha": "^5.2.0"
   },
   "dependencies": {
     "doctrine": "^2.0.0",
